# poetry

./: pyproject.toml  render.yaml
poetry/env/: pyvenv.cfg
poetry/env/Scripts/: Activate.ps1  activate  activate.bat  django-admin.py
poetry/mysite/: db.sqlite3  pyproject.toml
poetry/mysite/mysite/: settings.py  urls.py
poetry/mysite/render/: urls.py  views.py
poetry/mysite/render/templates/render/: index.html
