[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Olivier <olivier@claerbout.eu>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.5"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
